2008-12-22  Petr Ovtchenkov  <ptr@void-ptr.info>

	* lfstream.h, lfstream.cc: re-implementation of lfstream
	(file streams with file locks); only fcntl-based
	implementation supported now; POSIX fcntl-based file locking
	don't provide file lock within same process; the solution
	with extra rw lock mutexes has ambiguity: global table
	required, because same file may be opened via different
	fstreams; that's why locking within same process not provided
	at all;

	* libxmt: release 2.0.11.

2008-09-08  Petr Ovtchenkov  <ptr@void-ptr.info>

	* system_error: use misc/type_traits.h for gcc before 4.x and
	without STLport;

	* mutex: gcc 3.3.6 has a problem with friend templates;

	* libxmt: bump revision to 2.0.10.

2008-07-30  Petr Ovtchenkov  <ptr@island.corbina.net>

	* condition_variable: throw system_error when problem detected;
	fix barrier::wait---PTHREAD_BARRIER_SERIAL_THREAD is also
	normal return value; fix error processing in semaphore---sem_*
	functions indicate error via errno, not via return;

	* mutex: throw system_error when problem detected;
	
	* uid.cc: use system_error for detailed report about problem;

	* libxmt: bump revision to 2.0.9.

2008-07-25  Petr Ovtchenkov  <ptr@island.corbina.net>

	* system_error, system_error.cc: basic functionality
	of system_error and friends, as described in
	http://www.open-std.org/jtc1/sc22/WG21/docs/papers/2008/n2691.pdf;
	no locale support; no real difference between system_category
	and posix_category;

	* mt_test_suite.cc, sys_err_test.h, sys_err_test.cc: basic
	trivial test for system_error;

	* libxmt: bump revision to 2.0.8.

2008-07-21  Petr Ovtchenkov  <ptr@island.corbina.net>

	* mutex: avoid usage of error_catalog---interface in
	system_error changed.

	* system_error, system_error.cc: follow
	http://www.open-std.org/jtc1/sc22/WG21/docs/papers/2008/n2691.pdf

2008-07-07  Petr Ovtchenkov  <ptr@island.corbina.net>

	* uid.cc, uid.h: convert uid to string; output uid
	to ostream;
