@@ -241,9 +241,11 @@ class basic_ilfstream :
         }
       }
 
+#if 0
     std::basic_ilfstream<_CharT, _Traits>&
     operator>>(std::basic_ilfstream<_CharT, _Traits>& (*__f)(std::basic_ilfstream<_CharT, _Traits>&) )
       { return __f(*this); }
+#endif
 
   private:
     std::basic_lfilebuf<_CharT, _Traits> _M_buf;
@@ -365,9 +367,11 @@ class basic_olfstream :
         }
       }
 
+#if 0
     std::basic_olfstream<_CharT, _Traits>&
     operator<<(std::basic_olfstream<_CharT, _Traits>& (*__f)(std::basic_olfstream<_CharT, _Traits>&) )
       { return __f(*this); }
+#endif
 
   private:
     std::basic_lfilebuf<_CharT, _Traits> _M_buf;
@@ -496,6 +500,7 @@ class basic_lfstream :
         }
       }
 
+#if 0
     std::basic_lfstream<_CharT, _Traits>&
     operator<<(std::basic_lfstream<_CharT, _Traits>& (*__f)(std::basic_lfstream<_CharT, _Traits>&) )
       { return __f(*this); }
@@ -503,6 +508,7 @@ class basic_lfstream :
     std::basic_lfstream<_CharT, _Traits>&
     operator>>(std::basic_lfstream<_CharT, _Traits>& (*__f)(std::basic_lfstream<_CharT, _Traits>&) )
       { return __f(*this); }
+#endif
 
   private:
     /* mutable */ std::basic_lfilebuf<_CharT, _Traits> _M_buf;
@@ -511,6 +517,8 @@ class basic_lfstream :
 typedef basic_ilfstream<char,char_traits<char> > ilfstream;
 typedef basic_olfstream<char,char_traits<char> > olfstream;
 typedef basic_lfstream<char,char_traits<char> >  lfstream;
+
+#if 0
 
 template <class _CharT, class _Traits>
 inline basic_ilfstream<_CharT,_Traits>& lock( basic_ilfstream<_CharT,_Traits>& _s )
@@ -547,6 +555,8 @@ inline basic_lfstream<_CharT,_Traits>& rdlock( basic_lfstream<_CharT,_Traits>& _
 template <class _CharT, class _Traits>
 inline basic_lfstream<_CharT,_Traits>& unlock( basic_lfstream<_CharT,_Traits>& _s )
 { _s.unlock(); return _s; }
+
+#endif
 
 } // namespace std
 
